fix flex wrapping css in project page for tech stack icons

--- a/css/projects.css
+++ b/css/projects.css
@@ -127,6 +127,7 @@ main section.content .project-meta .client-name {
 
 main section.content .project-meta .icons {
     display: flex;
+    flex-wrap: wrap;
     gap: 10px;
 }
 
